syntax = "proto3";

package stock;

option go_package = "backend/internal/infrastructure/grpc";

service StockService {
  rpc GetStockData(StockRequest) returns (StockResponse) {}
  
  rpc GetAllStockData(EmptyRequest) returns (stream StockData) {}
}

message EmptyRequest {}

message StockRequest {
  string stock_name = 1;
}

message StockData {
  string stock_name = 1;
  string a_stock_code = 2;
  string h_stock_code = 3;
}

message StockResponse {
  repeated StockData stocks = 1;
}